test/scc_test/decl/semantic-errors/044.a
044.t:1:10: error: 'inline' specifier allowed on function declarations only